# notes

./: README.md  clang-tidy.md  markdown.md
sfml_template/: CMakeLists.txt  readme.md
